# simd

./: .gitignore  LICENSE  README.md  msvc_svml_probe.cod  msvc_svml_probe2.cod
Include/: environment.h  simd-concepts.h  simd-cpuid.h  simd-f32.h  simd-f64.h  simd-int32.h  simd-int64.h  simd-uint32.h  simd-uint64.h
Tests/: CMakeLists.txt  main.cpp  test_f32.cpp  test_f64.cpp  test_f64.h  test_harness.h  test_i32.cpp  test_i32.h  test_i64.cpp  test_u32.cpp  test_u32.h  test_u64.cpp  test_u64.h
include/: environment.h  simd-common.h  simd-concepts.h  simd-cpuid.h  simd-f32.h  simd-f64.h  simd-int32.h  simd-int64.h  simd-mask.h  simd-uint32.h  simd-uint64.h  simd-wasm-helpers.h
tests/: CMakeLists.txt  main.cpp  test_f32.cpp  test_f32.h  test_f64.cpp  test_i32.cpp  test_i64.cpp  test_i64.h  test_u32.cpp  test_u64.cpp
